--- a/style.css
+++ b/style.css
@@ -91,4 +91,8 @@ button:focus {
         background: #000;
         color: #fff;
 }
-    
+
+.sam{
+    justify-content: center;
+    text-align: center;
+}
